--- a/index.html
+++ b/index.html
@@ -77,10 +77,10 @@
         </div>
       </div>
       <div id="projects" class="content">
-        a
+        Em Desenvolvimento
       </div>
       <div id="Certificados" class="content">
-        Aqui estão os Certificados.
+        Em Desenvolvimento
       </div>
   </section>
 
