--- a/index.html
+++ b/index.html
@@ -22,10 +22,10 @@
   <section>
     <div class="center">
       <nav class="navbar">
-        <button class="accordion" onclick="showContent('home')">Home</button>
+        <button class="accordion stylenavbar" onclick="showContent('home')">GF</button>
         <button class="accordion" onclick="showContent('experience')">Experiência</button>
-        <button class="accordion" onclick="showContent('projects')">Projetos</button>
         <button class="accordion" onclick="showContent('Certificados')">Certificados</button>
+        <button class="accordion" onclick="showContent('projects')">Projetos</button>
       </nav>
       <div id="home" class="content active">
         <div class="row">
@@ -76,11 +76,86 @@
           </div>
         </div>
       </div>
-      <div id="projects" class="content">
-        Em Desenvolvimento
-      </div>
       <div id="Certificados" class="content">
-        Em Desenvolvimento
+        <div class="container text-center certificates">
+          <div class="row row-cols-1 row-cols-sm-2">
+            <div class="col">
+              <h4>React Completo</h4>
+              <a href="https://www.origamid.com/" target="_blank"><span>Organização: Origammid</span></a>
+              <a href="https://www.origamid.com/certificate/780056e5" target="_blank"><button>Visualizar</button></a>
+            </div>
+            <div class="col">
+              <h4>Redux com React</h4>
+              <a href="https://www.origamid.com/" target="_blank"><span>Organização: Origammid</span></a>
+              <a href="https://www.origamid.com/certificate/05f5dc0d" target="_blank"><button>Visualizar</button></a>
+            </div>
+            <div class="col">
+              <h4>UI Design para Iniciantes</h4>
+              <a href="https://www.origamid.com/" target="_blank"><span>Organização: Origammid</span></a>
+              <a href="https://www.origamid.com/certificate/e6e82d26" target="_blank"><button>Visualizar</button></a>
+            </div>
+            <div class="col">
+              <h4>HTML e CSS para Iniciantes</h4>
+              <a href="https://www.origamid.com/" target="_blank"><span>Organização: Origammid</span></a>
+              <a href="https://www.origamid.com/certificate/bedcdce4/" target="_blank"><button>Visualizar</button></a>
+            </div>
+          </div>
+          <div class="row">
+            <h4>Conhecimento e Habilidades</h4>
+          </div>
+          <div class="row row-cols-1 row-cols-sm-2 row-cols-md-4">
+            <div class="col">
+              <img src="imgs/HTML-CSS.png" alt="">
+              <span>HTML & CSS</span>
+            </div>
+            <div class="col">
+              <img src="imgs/js.png" alt="">
+              <span>JavaScript</span>
+            </div>
+            <div class="col">
+              <img src="imgs/uiux.png" alt="">
+              <span>UI/UX</span>
+            </div>
+            <div class="col">
+              <img src="imgs/github.png" alt="">
+              <span>GitHub</span>
+            </div>
+            <div class="col">
+              <img src="imgs/php.png" alt="">
+              <span>PHP</span>
+            </div>
+            <div class="col">
+              <img src="imgs/react.png" alt="">
+              <span>React</span>
+            </div>
+            <div class="col">
+              <img src="imgs/redux.png" alt="">
+              <span>Redux</span>
+            </div>
+          </div>
+        </div>
+      </div>
+      <div id="projects" class="content">
+        <div class="container text-center">
+          <div class="row row-cols-2 projetos">
+            <div class="col">
+              <h3>MyZoo</h3>
+              <img src="imgs/MyZoo.jpg" alt="website_Myzoo">
+              <br>
+              <span>O website myzoo foi desenvolvido para uma empresa privada para realizar o gerenciamento de vendas de produtos em pontos espalhados pela cidade, onde também é possivel visualizar o balanço geral do mês e as contas correntes de cada ponto.</span>
+              <br>
+              <a href="#"><button disabled>Visualizar</button></a>
+            </div>
+            <div class="col">
+              <h3>Meu Porquinho</h3>
+              <img src="imgs/meuporquinho.png" alt="website_MeuPorquinho">
+              <br>
+              <span>Meu Porquinho é um site para controle financeiro pessoal, permitindo registrar despesas em diversas categorias e estabelecer metas de poupança. É uma ferramenta valiosa para quem deseja melhorar a gestão financeira e alcançar objetivos de economia.</span>
+              <br>
+              <a href="https://controlededinheiro-gff.netlify.app/" target="_blank"><button>Visualizar</button></a>
+            </div>
+          </div>
+        </div>
       </div>
   </section>
 
