--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>Bootstrap demo</title>
+  <title>GFFogaca</title>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
   <!-- css -->
@@ -34,13 +34,13 @@
             <span>Front End Developer & UI/UX Designer, atualmente atuando como Freelancer. Gosto de passar o tempo jogando, assistindo séries, animes e desenvolvendo novos projetos.</span>
             <div>
               <button>Contato</button>
-              <a href="https://github.com/gabrielfogaca">
+              <a href="https://github.com/gabrielfogaca" target="_blank">
                 <i class="bi bi-github"></i>
               </a>
-              <a href="https://www.linkedin.com/in/gabriel-furlan-foga%C3%A7a-125a49218/">
+              <a href="https://www.linkedin.com/in/gabriel-furlan-foga%C3%A7a-125a49218/" target="_blank">
                 <i class="bi bi-linkedin"></i>
               </a>
-              <a href="https://www.instagram.com/gabrielfog/">
+              <a href="https://www.instagram.com/gabrielfog/" target="_blank">
                 <i class="bi bi-instagram"></i>
               </a>
             </div>
