--- a/index.html
+++ b/index.html
@@ -16,6 +16,14 @@
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Comforter&display=swap" rel="stylesheet">
   <link rel="shortcut icon" type="imagex/png" href="imgs/url.ico">
+
+  <!-- Bootstrap CSS -->
+  <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" rel="stylesheet">
+
+  <!-- jQuery e Bootstrap JS -->
+  <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js"></script>
+  <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
 </head>
 
 <body>
@@ -170,7 +178,7 @@
           <h5 class="modal-title" id="exampleModalLongTitle">Entre em Contato!</h5>
         </div>
         <div class="modal-body">
-          <form target="_blank" action="https://formsubmit.co/gabrielfurlanfogaca@gmail.com" method="POST">
+          <form id="contactForm" method="POST">
             <div class="form-group">
               <div class="form-row">
                 <div class="col">
@@ -179,7 +187,6 @@
                 <div class="col">
                   <input type="email" name="email" class="form-control" placeholder="Endereço de Email" required>
                   <input type="hidden" name="_captcha" value="false">
-                  <input type="hidden" name="_next" value="https://gabrielfogaca.github.io/gabrielffogaca/">
                 </div>
               </div>
             </div>
@@ -188,10 +195,14 @@
             </div>
             <button type="submit" class="btn btn-primary">Enviar</button>
           </form>
+          <div id="confirmationMessage" style="display:none; text-align: center; margin-top: 20px;">
+            <p>Formulário enviado com sucesso!</p>
+          </div>
         </div>
       </div>
     </div>
   </div>
+
 
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
   <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js" integrity="sha384-I7E8VVD/ismYTF4hNIPjVp/Zjvgyol6VFvRkX/vR+Vc4jQkC+hVqc2pM8ODewa9r" crossorigin="anonymous"></script>
