--- a/index.html
+++ b/index.html
@@ -162,6 +162,7 @@
       </div>
   </section>
 
+
   <!-- Modal -->
   <div class="modal fade" id="exampleModalCenter" tabindex="-1" role="dialog" aria-labelledby="exampleModalCenterTitle" aria-hidden="true">
     <div class="modal-dialog modal-dialog-centered" role="document">
@@ -170,159 +171,155 @@
           <h5 class="modal-title" id="exampleModalLongTitle">Entre em Contato!</h5>
         </div>
         <div class="modal-body">
-          <form target="_blank" action="https://formsubmit.co/gabrielfurlanfogaca@gmail.com" method="POST">
-            <div class="form-group">
-              <div class="form-row">
-                <div class="col">
-                  <input type="text" name="name" class="form-control" placeholder="Nome" required>
-                </div>
-                <div class="col">
-                  <input type="email" name="email" class="form-control" placeholder="Endereço de Email" required>
-                  <input type="hidden" name="_captcha" value="false">
-                  <input type="hidden" name="_next" value="https://gabrielfogaca.github.io/gabrielffogaca/">
-                </div>
-              </div>
-            </div>
-            <div class="form-group">
-              <textarea placeholder="Assunto" class="form-control" name="message" rows="10" required></textarea>
-            </div>
-            <button type="submit" class="btn btn-primary">Enviar</button>
+          <!-- HTML do Formulário -->
+          <form action="https://submit-form.com/xaKfeiSD7" class="contact-form">
+            <input type="hidden" name="_redirect" value="https://gabrielfogaca.github.io/gabrielffogaca/" />
+            <label for="name">Name</label>
+            <input type="text" id="name" name="name" placeholder="Nome" required="" />
+            <label for="email">Email</label>
+            <input type="email" id="email" name="email" placeholder="Email" required="" />
+            <label for="message">Message</label>
+            <textarea id="message" name="message" placeholder="Assunto" required=""></textarea>
+            <button type="submit">Send</button>
           </form>
         </div>
       </div>
     </div>
-  </div>
-
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
-  <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js" integrity="sha384-I7E8VVD/ismYTF4hNIPjVp/Zjvgyol6VFvRkX/vR+Vc4jQkC+hVqc2pM8ODewa9r" crossorigin="anonymous"></script>
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.min.js" integrity="sha384-0pUGZvbkm6XF6gxjEnlmuGrJXVbNuzT9qBBavbLwCsOGabYfZo0T0to5eqruptLy" crossorigin="anonymous"></script>
-  <script>
-    function showContent(contentId) {
-      // Oculta todos os conteúdos
-      var contents = document.querySelectorAll('.content');
-      contents.forEach(function (content) {
-        content.classList.remove('active');
-        content.style.display = 'none'; // Oculta os desativados
-      });
-
-      // Mostra o conteúdo selecionado
-      var selectedContent = document.getElementById(contentId);
-      selectedContent.classList.add('active');
-      selectedContent.style.display = 'block'; // Exibe o conteúdo ativo
-    }
-  </script>
 
 
-  <!-- Optional JavaScript -->
-  <!-- jQuery first, then Popper.js, then Bootstrap JS -->
-  <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
-  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
-  <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
-  <script>
-    AOS.init();
-  </script>
-  <script>
-    const resolver = {
-      resolve: function resolve(options, callback) {
-        // The string to resolve
-        const resolveString = options.resolveString || options.element.getAttribute('data-target-resolver');
-        const combinedOptions = Object.assign({}, options, { resolveString: resolveString });
 
-        function getRandomInteger(min, max) {
-          return Math.floor(Math.random() * (max - min + 1)) + min;
-        };
 
-        function randomCharacter(characters) {
-          return characters[getRandomInteger(0, characters.length - 1)];
-        };
 
-        function doRandomiserEffect(options, callback) {
-          const characters = options.characters;
-          const timeout = options.timeout;
-          const element = options.element;
-          const partialString = options.partialString;
 
-          let iterations = options.iterations;
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js" integrity="sha384-I7E8VVD/ismYTF4hNIPjVp/Zjvgyol6VFvRkX/vR+Vc4jQkC+hVqc2pM8ODewa9r" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.min.js" integrity="sha384-0pUGZvbkm6XF6gxjEnlmuGrJXVbNuzT9qBBavbLwCsOGabYfZo0T0to5eqruptLy" crossorigin="anonymous"></script>
+    <script>
+      function showContent(contentId) {
+        // Oculta todos os conteúdos
+        var contents = document.querySelectorAll('.content');
+        contents.forEach(function (content) {
+          content.classList.remove('active');
+          content.style.display = 'none'; // Oculta os desativados
+        });
 
-          setTimeout(() => {
-            if (iterations >= 0) {
-              const nextOptions = Object.assign({}, options, { iterations: iterations - 1 });
-
-              // Ensures partialString without the random character as the final state.
-              if (iterations === 0) {
-                element.textContent = partialString;
-              } else {
-                // Replaces the last character of partialString with a random character
-                element.textContent = partialString.substring(0, partialString.length - 1) + randomCharacter(characters);
-              }
-
-              doRandomiserEffect(nextOptions, callback)
-            } else if (typeof callback === "function") {
-              callback();
-            }
-          }, options.timeout);
-        };
-
-        function doResolverEffect(options, callback) {
-          const resolveString = options.resolveString;
-          const characters = options.characters;
-          const offset = options.offset;
-          const partialString = resolveString.substring(0, offset);
-          const combinedOptions = Object.assign({}, options, { partialString: partialString });
-
-          doRandomiserEffect(combinedOptions, () => {
-            const nextOptions = Object.assign({}, options, { offset: offset + 1 });
-
-            if (offset <= resolveString.length) {
-              doResolverEffect(nextOptions, callback);
-            } else if (typeof callback === "function") {
-              callback();
-            }
-          });
-        };
-
-        doResolverEffect(combinedOptions, callback);
+        // Mostra o conteúdo selecionado
+        var selectedContent = document.getElementById(contentId);
+        selectedContent.classList.add('active');
+        selectedContent.style.display = 'block'; // Exibe o conteúdo ativo
       }
-    }
+    </script>
 
-    const strings = [
-      'Gabriel Furlan Fogaça ',
-    ];
+    <!-- Optional JavaScript -->
+    <!-- jQuery first, then Popper.js, then Bootstrap JS -->
+    <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
+    <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
+    <script>
+      AOS.init();
+    </script>
+    <script>
+      const resolver = {
+        resolve: function resolve(options, callback) {
+          // The string to resolve
+          const resolveString = options.resolveString || options.element.getAttribute('data-target-resolver');
+          const combinedOptions = Object.assign({}, options, { resolveString: resolveString });
 
-    let counter = 0;
+          function getRandomInteger(min, max) {
+            return Math.floor(Math.random() * (max - min + 1)) + min;
+          };
 
-    const options = {
-      // Initial position
-      offset: 0,
-      // Timeout between each random character
-      timeout: 5,
-      // Number of random characters to show
-      iterations: 10,
-      // Random characters to pick from
-      characters: ['.', '|'],
-      // String to resolve
-      resolveString: strings[counter],
-      // The element
-      element: document.querySelector('[data-target-resolver]')
-    }
+          function randomCharacter(characters) {
+            return characters[getRandomInteger(0, characters.length - 1)];
+          };
 
-    // Callback function when resolve completes
-    function callback() {
-      setTimeout(() => {
-        counter++;
+          function doRandomiserEffect(options, callback) {
+            const characters = options.characters;
+            const timeout = options.timeout;
+            const element = options.element;
+            const partialString = options.partialString;
 
-        if (counter >= strings.length) {
-          counter = 0;
+            let iterations = options.iterations;
+
+            setTimeout(() => {
+              if (iterations >= 0) {
+                const nextOptions = Object.assign({}, options, { iterations: iterations - 1 });
+
+                // Ensures partialString without the random character as the final state.
+                if (iterations === 0) {
+                  element.textContent = partialString;
+                } else {
+                  // Replaces the last character of partialString with a random character
+                  element.textContent = partialString.substring(0, partialString.length - 1) + randomCharacter(characters);
+                }
+
+                doRandomiserEffect(nextOptions, callback)
+              } else if (typeof callback === "function") {
+                callback();
+              }
+            }, options.timeout);
+          };
+
+          function doResolverEffect(options, callback) {
+            const resolveString = options.resolveString;
+            const characters = options.characters;
+            const offset = options.offset;
+            const partialString = resolveString.substring(0, offset);
+            const combinedOptions = Object.assign({}, options, { partialString: partialString });
+
+            doRandomiserEffect(combinedOptions, () => {
+              const nextOptions = Object.assign({}, options, { offset: offset + 1 });
+
+              if (offset <= resolveString.length) {
+                doResolverEffect(nextOptions, callback);
+              } else if (typeof callback === "function") {
+                callback();
+              }
+            });
+          };
+
+          doResolverEffect(combinedOptions, callback);
         }
+      }
 
-        let nextOptions = Object.assign({}, options, { resolveString: strings[counter] });
-        resolver.resolve(nextOptions, callback);
-      }, 1000);
-    }
+      const strings = [
+        'Gabriel Furlan Fogaça ',
+      ];
 
-    resolver.resolve(options, callback);
-  </script>
+      let counter = 0;
+
+      const options = {
+        // Initial position
+        offset: 0,
+        // Timeout between each random character
+        timeout: 5,
+        // Number of random characters to show
+        iterations: 10,
+        // Random characters to pick from
+        characters: ['.', '|'],
+        // String to resolve
+        resolveString: strings[counter],
+        // The element
+        element: document.querySelector('[data-target-resolver]')
+      }
+
+      // Callback function when resolve completes
+      function callback() {
+        setTimeout(() => {
+          counter++;
+
+          if (counter >= strings.length) {
+            counter = 0;
+          }
+
+          let nextOptions = Object.assign({}, options, { resolveString: strings[counter] });
+          resolver.resolve(nextOptions, callback);
+        }, 1000);
+      }
+
+      resolver.resolve(options, callback);
+    </script>
 </body>
 
 </html>
