--- a/index.html
+++ b/index.html
@@ -174,13 +174,13 @@
           <!-- HTML do Formulário -->
           <form action="https://submit-form.com/xaKfeiSD7" class="contact-form">
             <input type="hidden" name="_redirect" value="https://gabrielfogaca.github.io/gabrielffogaca/" />
-            <label for="name">Name</label>
+            <label for="name">Nome</label>
             <input type="text" id="name" name="name" placeholder="Nome" required="" />
             <label for="email">Email</label>
             <input type="email" id="email" name="email" placeholder="Email" required="" />
-            <label for="message">Message</label>
+            <label for="message">Mensagem</label>
             <textarea id="message" name="message" placeholder="Assunto" required=""></textarea>
-            <button type="submit">Send</button>
+            <button type="submit">Enviar</button>
           </form>
         </div>
       </div>
