infinite scroll animation-certificates

--- a/index.html
+++ b/index.html
@@ -106,34 +106,61 @@
           <div class="row">
             <h4>Conhecimento e Habilidades</h4>
           </div>
-          <div class="row row-cols-1 row-cols-sm-2 row-cols-md-4">
-            <div class="col">
-              <img src="imgs/HTML-CSS.png" alt="">
-              <span>HTML & CSS</span>
-            </div>
-            <div class="col">
-              <img src="imgs/js.png" alt="">
-              <span>JavaScript</span>
-            </div>
-            <div class="col">
-              <img src="imgs/uiux.png" alt="">
-              <span>UI/UX</span>
-            </div>
-            <div class="col">
-              <img src="imgs/github.png" alt="">
-              <span>GitHub</span>
-            </div>
-            <div class="col">
-              <img src="imgs/php.png" alt="">
-              <span>PHP</span>
-            </div>
-            <div class="col">
-              <img src="imgs/react.png" alt="">
-              <span>React</span>
-            </div>
-            <div class="col">
-              <img src="imgs/redux.png" alt="">
-              <span>Redux</span>
+          <div class="infinite-scroll">
+            <div class="row row-cols-1 row-cols-sm-2 row-cols-md-4">
+              <div class="col">
+                <img src="imgs/HTML-CSS.png" alt="">
+                <span>HTML & CSS</span>
+              </div>
+              <div class="col">
+                <img src="imgs/js.png" alt="">
+                <span>JavaScript</span>
+              </div>
+              <div class="col">
+                <img src="imgs/uiux.png" alt="">
+                <span>UI/UX</span>
+              </div>
+              <div class="col">
+                <img src="imgs/github.png" alt="">
+                <span>GitHub</span>
+              </div>
+              <div class="col">
+                <img src="imgs/php.png" alt="">
+                <span>PHP</span>
+              </div>
+              <div class="col">
+                <img src="imgs/react.png" alt="">
+                <span>React</span>
+              </div>
+              <div class="col">
+                <img src="imgs/redux.png" alt="">
+                <span>Redux</span>
+              </div>
+              <!-- Duplicate the content for infinite effect -->
+              <div class="col">
+                <img src="imgs/HTML-CSS.png" alt="">
+                <span>HTML & CSS</span>
+              </div>
+              <div class="col">
+                <img src="imgs/js.png" alt="">
+                <span>JavaScript</span>
+              </div>
+              <div class="col">
+                <img src="imgs/uiux.png" alt="">
+                <span>UI/UX</span>
+              </div>
+              <div class="col">
+                <img src="imgs/github.png" alt="">
+                <span>GitHub</span>
+              </div>
+              <div class="col">
+                <img src="imgs/php.png" alt="">
+                <span>PHP</span>
+              </div>
+              <div class="col">
+                <img src="imgs/react.png" alt="">
+                <span>React</span>
+              </div>
             </div>
           </div>
         </div>
