--- a/index.html
+++ b/index.html
@@ -32,9 +32,9 @@
         <div class="row">
           <div class="col home-leftSide">
             <h1 class="heading" data-target-resolver></h1>
-            <span>Front End Developer & UI/UX Designer, atualmente atuando como Freelancer. Gosto de passar o tempo jogando, assistindo séries, animes e desenvolvendo novos projetos.</span>
+            <span>FullStack Developer, atualmente atuando como Freelancer. Veja meus Projetos clicando <a type="button" onclick="showContent('projects')">aqui.</a></span>
             <div>
-              <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#exampleModalCenter">
+              <button type=" button" class="btn btn-primary" data-toggle="modal" data-target="#exampleModalCenter">
                 Contato
               </button>
               <a href="https://github.com/gabrielfogaca" target="_blank">
@@ -74,7 +74,6 @@
             </a>
             <span>Duração: Out. de 2020 - Jun. de 2022</span>
             <li>Atendimento ao usuario</li>
-            <li>Desenvolvimento de modulos</li>
             <li>Organização e ajustes de demandas</li>
           </div>
         </div>
@@ -165,24 +164,47 @@
           </div>
         </div>
       </div>
-      <div id="projects" class="p1 content" style="display: none;">
+      <div id="projects" class="p1 content overflow" style="display: none;">
         <div class="container text-center">
           <div class="row col-md-auto projetos">
+            <div class="col">
+              <h3>Sabrina Schreiber Engenharia</h3>
+              <img src="imgs/sseng.gif" alt="website_MeuPorquinho">
+              <br>
+              <span>Tecnolias utilizadas: React, TailWind CSS & EmailJS</span>
+              <p>O website Sabrina Schreiber foi desenvolvido para dar visibilidade para a empresa SS Engenharia.</p>
+              <br>
+              <a href="https://sabrinaschreiberengenharia.com.br/" target="_blank"><button>Visualizar</button></a>
+            </div>
+
+            <div class="col">
+              <h3>Mecanica Fogaça</h3>
+              <img src="imgs/mecfog.gif" alt="website_MeuPorquinho">
+              <br>
+              <span>Tecnolias utilizadas: React, TailWind CSS, Material UI & Firebase</span>
+              <p>O website Sabrina Schreiber foi desenvolvido para dar visibilidade para a empresa SS Engenharia.</p>
+              <br>
+              <a href="#" target="_blank"><button>Visualizar</button></a>
+            </div>
+
+            <div class="col">
+              <h3>Meu Porquinho</h3>
+              <img src="imgs/Mporquin.gif" alt="website_MeuPorquinho">
+              <br>
+              <span>Tecnolias utilizadas: HTML, CSS, JavaScript & Firebase.</span>
+              <p>O website Meu Porquinho foi desenvolvido como um trabalho de conclusão de curso.</p>
+              <br>
+              <a href="https://controlededinheiro-gff.netlify.app/" target="_blank"><button>Visualizar</button></a>
+            </div>
+
             <div class="col">
               <h3>MyZoo</h3>
               <img src="imgs/MyZoo.jpg" alt="website_Myzoo">
               <br>
-              <span>O website myzoo foi desenvolvido para uma empresa privada para realizar o gerenciamento de vendas de produtos em pontos espalhados pela cidade, onde também é possivel visualizar o balanço geral do mês e as contas correntes de cada ponto.</span>
+              <span>Tecnolias utilizadas: HTML, CSS, JavaScript & Firebase.</span>
+              <p>O website myzoo foi desenvolvido para o controle diario e mensal vendas e o geranciamento de despesas.</p>
               <br>
               <a href="#"><button disabled>Visualizar</button></a>
-            </div>
-            <div class="col">
-              <h3>Meu Porquinho</h3>
-              <img src="imgs/meuporquinho.png" alt="website_MeuPorquinho">
-              <br>
-              <span>Meu Porquinho é um site para controle financeiro pessoal, permitindo registrar despesas em diversas categorias e estabelecer metas de poupança. É uma ferramenta valiosa para quem deseja melhorar a gestão financeira e alcançar objetivos de economia.</span>
-              <br>
-              <a href="https://controlededinheiro-gff.netlify.app/" target="_blank"><button>Visualizar</button></a>
             </div>
           </div>
         </div>
