descricao mecanica fogaca

--- a/index.html
+++ b/index.html
@@ -182,7 +182,7 @@
               <img src="imgs/mecfog.gif" alt="website_MeuPorquinho">
               <br>
               <span>Tecnolias utilizadas: React, TailWind CSS, Material UI & Firebase</span>
-              <p>O website Sabrina Schreiber foi desenvolvido para dar visibilidade para a empresa SS Engenharia.</p>
+              <p>Foi desenvolvido um sistema web para a Mecanica Fogaca. Esse sistema possui funcionalidades como cadastro de clientes, peças, despesas, fechamento do mês e geração de orçamentos.</p>
               <br>
               <a href="#" target="_blank"><button>Visualizar</button></a>
             </div>
