ajuste nos paragrafos dos projetos

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
         <div class="row">
           <div class="col home-leftSide">
             <h1 class="heading" data-target-resolver></h1>
-            <span>FullStack Developer, atualmente atuando como Freelancer. Veja meus Projetos clicando <a type="button" onclick="showContent('projects')">aqui.</a></span>
+            <span>FullStack Developer, atualmente atuando como Freelancer. Veja meus Projetos clicando <a style="text-decoration: underline;" type="button" onclick="showContent('projects')">aqui.</a></span>
             <div>
               <button type=" button" class="btn btn-primary" data-toggle="modal" data-target="#exampleModalCenter">
                 Contato
@@ -167,12 +167,14 @@
       <div id="projects" class="p1 content overflow" style="display: none;">
         <div class="container text-center">
           <div class="row col-md-auto projetos">
+
             <div class="col">
               <h3>Sabrina Schreiber Engenharia</h3>
               <img src="imgs/sseng.gif" alt="website_MeuPorquinho">
               <br>
-              <span>Tecnolias utilizadas: React, TailWind CSS & EmailJS</span>
-              <p>O website Sabrina Schreiber foi desenvolvido para dar visibilidade para a empresa SS Engenharia.</p>
+              <span>Tecnolias: React, TailWind CSS & EmailJS</span>
+              <br>
+              <p>Foi desenvolvido um portfólio para a Sabrina Schreiber Engenharia, visando aumentar a visibilidade da empresa no mercado, destacando seus serviços de engenharia com um layout moderno, responsivo e otimizado para dispositivos móveis.</p>
               <br>
               <a href="https://sabrinaschreiberengenharia.com.br/" target="_blank"><button>Visualizar</button></a>
             </div>
@@ -181,8 +183,9 @@
               <h3>Mecanica Fogaça</h3>
               <img src="imgs/mecfog.gif" alt="website_MeuPorquinho">
               <br>
-              <span>Tecnolias utilizadas: React, TailWind CSS, Material UI & Firebase</span>
-              <p>Foi desenvolvido um sistema web para a Mecanica Fogaca. Esse sistema possui funcionalidades como cadastro de clientes, peças, despesas, fechamento do mês e geração de orçamentos.</p>
+              <span>Tecnolias: React, TailWind CSS, Material UI & Firebase</span>
+              <br>
+              <p>Foi criado um sistema web para a Mecânica Fogaça com funcionalidades como cadastro de clientes, peças, despesas, geração de orçamentos e controle financeiro mensal, facilitando a gestão completa da empresa e otimizando o fechamento do mês.</p>
               <br>
               <a href="https://github.com/gabrielfogaca/MecFogaca" target="_blank"><button>Visualizar</button></a>
             </div>
@@ -191,8 +194,9 @@
               <h3>Meu Porquinho</h3>
               <img src="imgs/Mporquin.gif" alt="website_MeuPorquinho">
               <br>
-              <span>Tecnolias utilizadas: HTML, CSS, JavaScript & Firebase.</span>
-              <p>O website Meu Porquinho foi desenvolvido como um trabalho de conclusão de curso.</p>
+              <span>Tecnolias: HTML, CSS, JavaScript & Firebase.</span>
+              <br>
+              <p>Meu Porquinho foi desenvolvido como trabalho de conclusão de curso, sendo um website voltado ao controle financeiro pessoal. Ele permite aos usuários registrar suas despesas, gerenciar orçamentos e traçar metas de economia de forma prática e acessível.</p>
               <br>
               <a href="https://controlededinheiro-gff.netlify.app/" target="_blank"><button>Visualizar</button></a>
             </div>
@@ -201,8 +205,9 @@
               <h3>MyZoo</h3>
               <img src="imgs/MyZoo.jpg" alt="website_Myzoo">
               <br>
-              <span>Tecnolias utilizadas: HTML, CSS, JavaScript & Firebase.</span>
-              <p>O website myzoo foi desenvolvido para o controle diario e mensal vendas e o geranciamento de despesas.</p>
+              <span>Tecnolias: HTML, CSS, JavaScript & Firebase.</span>
+              <br>
+              <p>O website MyZoo foi desenvolvido para o controle diário e mensal de vendas, além do gerenciamento de despesas, auxiliando no acompanhamento financeiro de empresas do setor. O sistema foi projetado para facilitar a gestão de receitas e custos.</p>
               <br>
               <a href="#"><button disabled>Visualizar</button></a>
             </div>
