--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <head>
   <meta charset="UTF-8" />
+  <link rel="icon" href="/public/imgs/url.ico" />
   <title>Gabriel Furlan Fogaça</title>
 </head>
 
