adjust on reponsivity for iphone 14

--- a/index.html
+++ b/index.html
@@ -1,5 +1,9 @@
 <head>
   <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta name="description" content="Gabriel Furlan Fogaça's personal website" />
+  <meta name="keywords" content="Gabriel Furlan Fogaça, personal website, portfolio, developer" />
+  <meta name="author" content="Gabriel Furlan Fogaça" />
   <link rel="icon" href="/public/imgs/url.ico" />
   <title>Gabriel Furlan Fogaça</title>
 </head>
