adjusts on ipad mini responsivity

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta name="description" content="Gabriel Furlan Fogaça's personal website" />
   <meta name="keywords" content="Gabriel Furlan Fogaça, personal website, portfolio, developer" />
   <meta name="author" content="Gabriel Furlan Fogaça" />
-  <link rel="icon" href="/public/imgs/url.ico" />
+  <link rel="icon" href="public/imgs/url.ico" />
   <title>Gabriel Furlan Fogaça</title>
 </head>
 
